--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<body>
 		<header>
 			<nav>
-				<a class="logo" href="#"
-					><img src="image/logo/reservia-3x.png" alt="logo "
+				<a href="#"
+					><img class="logo" src="image/logo/Reservia@3x.png" alt="logo "
 				/></a>
 				<a class="sign-in" href="#">S'inscrire</a>
 				<div class="anchor-box">
@@ -279,11 +279,11 @@
 					href="#"
 				>
 					<img
-						class="activities-image-size"
+						class="activities-image-size activities-image-size-1"
 						src="image/activités/vieuxport.jpg"
 						alt="Vieux Port"
 					/>
-					<div class="activities-text-size">
+					<div class="activities-text-size activities-text-size-1">
 						<h4 class="activities-location">Vieux Port</h4>
 					</div>
 				</a>
@@ -293,11 +293,11 @@
 						href="#"
 					>
 						<img
-							class="activities-image-size"
+							class="activities-image-size activities-image-size-2"
 							src="image/activités/fortdepomegues.jpg"
 							alt="Fort de Pomègues"
 						/>
-						<div class="activities-text-size">
+						<div class="activities-text-size activities-text-size-2">
 							<h4 class="activities-location">Fort de Pomègues</h4>
 						</div>
 					</a>
@@ -306,11 +306,11 @@
 						href="#"
 					>
 						<img
-							class="activities-image-size"
+							class="activities-image-size activities-image-size-3"
 							src="image/activités/ilesdufrioul.jpg"
 							alt="Îles du Frioul"
 						/>
-						<div class="activities-text-size">
+						<div class="activities-text-size activities-text-size-3">
 							<h4 class="activities-location">Îles du Frioul</h4>
 						</div>
 					</a>
@@ -319,11 +319,11 @@
 					class="activities-thumbnail-link-4 activities-thumbnail-phone"
 					href="#"
 					><img
-						class="activities-image-size"
+						class="activities-image-size activities-image-size-1"
 						src="image/activités/parcdescalanques.jpg"
 						alt="Parc National des Calanques"
 					/>
-					<div class="activities-text-size">
+					<div class="activities-text-size activities-text-size-1">
 						<h4 class="activities-location">Parc National des Calanques</h4>
 					</div>
 				</a>
@@ -333,11 +333,11 @@
 						href="#"
 					>
 						<img
-							class="activities-image-size"
+							class="activities-image-size activities-image-size-4"
 							src="image/activités/notredamedelagarde.jpg"
 							alt="Notre-Dame-de-la-Garde"
 						/>
-						<div class="activities-text-size">
+						<div class="activities-text-size activities-text-size-4">
 							<h4 class="activities-location">Notre-Dame-de-la-Garde</h4>
 						</div>
 					</a>
@@ -346,11 +346,11 @@
 						href="#"
 					>
 						<img
-							class="activities-image-size"
+							class="activities-image-size activities-image-size-4"
 							src="image/activités/parclongchamps.jpg"
 							alt="Parc Longchamp"
 						/>
-						<div class="activities-text-size">
+						<div class="activities-text-size activities-text-size-4">
 							<h4 class="activities-location">Parc Longchamp</h4>
 						</div>
 					</a>
