--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styleresponsive.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
+
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap"
 			rel="stylesheet"
@@ -13,6 +14,7 @@
 			src="https://kit.fontawesome.com/da14dfdb28.js"
 			crossorigin="anonymous"
 		></script>
+		<link rel="shortcut icon" href="image/logo/Reservia.svg" />
 		<title>Reservia</title>
 	</head>
 
