--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			src="https://kit.fontawesome.com/da14dfdb28.js"
 			crossorigin="anonymous"
 		></script>
-		<link rel="shortcut icon" href="image/logo/Reservia.svg" />
+		<link rel="shortcut icon" href="image/logo/reservia.ico" />
 		<title>Reservia</title>
 	</head>
 
@@ -47,7 +47,7 @@
 				<div class="line-tittle">
 					<p><strong>Filtres</strong></p>
 				</div>
-				<div>
+				<div class="filters-hover">
 					<a class="filters-bar filters-bar1" href="#">
 						<div class="filters-icon">
 							<i class="fas fa-money-bill-wave"></i>
@@ -55,7 +55,7 @@
 						<div class="filters-name filters-name1"><p>Économique</p></div>
 					</a>
 				</div>
-				<div>
+				<div class="filters-hover">
 					<a class="filters-bar filters-bar2" href="#">
 						<div class="filters-icon">
 							<i class="fas fa-child"></i>
@@ -63,7 +63,7 @@
 						<div class="filters-name filters-name2"><p>Familial</p></div>
 					</a>
 				</div>
-				<div>
+				<div class="filters-hover">
 					<a class="filters-bar filters-bar3" href="#">
 						<div class="filters-icon">
 							<i class="fas fa-heart"></i>
@@ -71,7 +71,7 @@
 						<div class="filters-name filters-name3"><p>Romantique</p></div>
 					</a>
 				</div>
-				<div>
+				<div class="filters-hover">
 					<a class="filters-bar filters-bar4" href="#">
 						<div class="filters-icon">
 							<i class="fas fa-dog"></i>
