suppression des accents dans les liens

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				/></a>
 				<a class="sign-in" href="#">S'inscrire</a>
 				<div class="anchor-box">
-					<a class="anchor" href="#Hébergements">Hébergements</a>
-					<a class="anchor" href="#Activités">Activités</a>
+					<a class="anchor" href="#host">Hébergements</a>
+					<a class="anchor" href="#activities">Activités</a>
 				</div>
 			</nav>
 			<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -103,7 +103,7 @@
 					<a class="popular-thumbnail-link" href="#">
 						<img
 							class="popular-image-size"
-							src="image/hébergement/hotellesoleil.jpg"
+							src="image/host/hotellesoleil.jpg"
 							alt="Hôtel le soleil du matin"
 						/>
 						<div class="popular-text-size">
@@ -121,7 +121,7 @@
 					<a class="popular-thumbnail-link" href="#">
 						<img
 							class="popular-image-size"
-							src="image/hébergement/aucoeurdeleau.jpg"
+							src="image/host/aucoeurdeleau.jpg"
 							alt="Au cœur de l'eau Chambres d'hôtes"
 						/>
 						<div class="popular-text-size">
@@ -139,7 +139,7 @@
 					<a class="popular-thumbnail-link" href="#">
 						<img
 							class="popular-image-size"
-							src="image/hébergement/hoteltoutbleu.jpg"
+							src="image/host/hoteltoutbleu.jpg"
 							alt="Hôtel Tout bleu et blanc"
 						/>
 						<div class="popular-text-size">
@@ -158,13 +158,11 @@
 				<!-- "popular" box end -->
 				<!-- "rental" box start -->
 				<article class="rental-box">
-					<h3 class="rental-head" id="Hébergements">
-						Hébergements à Marseille
-					</h3>
+					<h3 class="rental-head" id="host">Hébergements à Marseille</h3>
 					<a class="rental-thumbnail-link" href="#">
 						<img
 							class="rental-image-size"
-							src="image/hébergement/aubergelacannebiere.jpg"
+							src="image/host/aubergelacannebiere.jpg"
 							alt="Auberge la Cannebière"
 						/>
 						<div class="rental-text-size">
@@ -182,7 +180,7 @@
 					<a class="rental-thumbnail-link" href="#">
 						<img
 							class="rental-image-size"
-							src="image/hébergement/hotelduport.jpg"
+							src="image/host/hotelduport.jpg"
 							alt="Hôtel du port"
 						/>
 						<div class="rental-text-size">
@@ -200,7 +198,7 @@
 					<a class="rental-thumbnail-link" href="#">
 						<img
 							class="rental-image-size"
-							src="image/hébergement/hotellesmouettes.jpg"
+							src="image/host/hotellesmouettes.jpg"
 							alt="Hôtel Les mouettes"
 						/>
 						<div class="rental-text-size">
@@ -218,7 +216,7 @@
 					<a class="rental-thumbnail-link" href="#">
 						<img
 							class="rental-image-size"
-							src="image/hébergement/hoteldelamer.jpg"
+							src="image/host/hoteldelamer.jpg"
 							alt="Hôtel de la mer"
 						/>
 						<div class="rental-text-size">
@@ -236,7 +234,7 @@
 					<a class="rental-thumbnail-link" href="#">
 						<img
 							class="rental-image-size"
-							src="image/hébergement/aubergelepanier.jpg"
+							src="image/host/aubergelepanier.jpg"
 							alt="Auberge Le Panier"
 						/>
 						<div class="rental-text-size">
@@ -254,7 +252,7 @@
 					<a class="rental-thumbnail-link" href="#">
 						<img
 							class="rental-image-size"
-							src="image/hébergement/hotelchezamina.jpg"
+							src="image/host/hotelchezamina.jpg"
 							alt="Hôtel chez Amina"
 						/>
 						<div class="rental-text-size">
@@ -274,7 +272,7 @@
 			</div>
 			<!-- "rental" box end -->
 			<!-- "activities" box start -->
-			<h3 class="activities-head" id="Activités">Activités à Marseille</h3>
+			<h3 class="activities-head" id="activities">Activités à Marseille</h3>
 			<article class="activities-box">
 				<a
 					class="activities-thumbnail-link-1 activities-thumbnail-phone"
@@ -282,7 +280,7 @@
 				>
 					<img
 						class="activities-image-size activities-image-size-1"
-						src="image/activités/vieuxport.jpg"
+						src="image/activities/vieuxport.jpg"
 						alt="Vieux Port"
 					/>
 					<div class="activities-text-size activities-text-size-1">
@@ -296,7 +294,7 @@
 					>
 						<img
 							class="activities-image-size activities-image-size-2"
-							src="image/activités/fortdepomegues.jpg"
+							src="image/activities/fortdepomegues.jpg"
 							alt="Fort de Pomègues"
 						/>
 						<div class="activities-text-size activities-text-size-2">
@@ -309,7 +307,7 @@
 					>
 						<img
 							class="activities-image-size activities-image-size-3"
-							src="image/activités/ilesdufrioul.jpg"
+							src="image/activities/ilesdufrioul.jpg"
 							alt="Îles du Frioul"
 						/>
 						<div class="activities-text-size activities-text-size-3">
@@ -322,7 +320,7 @@
 					href="#"
 					><img
 						class="activities-image-size activities-image-size-1"
-						src="image/activités/parcdescalanques.jpg"
+						src="image/activities/parcdescalanques.jpg"
 						alt="Parc National des Calanques"
 					/>
 					<div class="activities-text-size activities-text-size-1">
@@ -336,7 +334,7 @@
 					>
 						<img
 							class="activities-image-size activities-image-size-4"
-							src="image/activités/notredamedelagarde.jpg"
+							src="image/activities/notredamedelagarde.jpg"
 							alt="Notre-Dame-de-la-Garde"
 						/>
 						<div class="activities-text-size activities-text-size-4">
@@ -349,7 +347,7 @@
 					>
 						<img
 							class="activities-image-size activities-image-size-4"
-							src="image/activités/parclongchamps.jpg"
+							src="image/activities/parclongchamps.jpg"
 							alt="Parc Longchamp"
 						/>
 						<div class="activities-text-size activities-text-size-4">
@@ -368,7 +366,7 @@
 				<a href="#">Données et confidentialités</a>
 			</aside>
 			<aside>
-				<p>Nos Hébergements</p>
+				<p>Nos host</p>
 				<a href="#">Charte qualité</a>
 				<a href="#">Soumettre votre hôtel</a>
 			</aside>
