--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 				<a href="#">Données et confidentialités</a>
 			</aside>
 			<aside>
-				<p>Nos host</p>
+				<p>Nos hébergements</p>
 				<a href="#">Charte qualité</a>
 				<a href="#">Soumettre votre hôtel</a>
 			</aside>
