--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="google-site-verification"
+			content="0sn4EF2uBedskOn0y9p81Iehym8nNZPhiagjhD5FEgE"
+		/>
 		<link rel="stylesheet" href="styleresponsive.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 
